--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.3",
-    "web-vitals": "^0.2.4"
-  },
-  "devDependencies": {
+    "web-vitals": "^0.2.4",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -31,11 +34,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "eslintConfig": {
     "extends": [
