--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.3",
-    "web-vitals": "^0.2.4",
-    "husky": "^5.0.9",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "web-vitals": "^0.2.4"
   },
   "husky": {
     "hooks": {
@@ -52,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1"
   }
 }
